--- a/src/java.base/share/classes/java/nio/Heap-X-Buffer.java.template
+++ b/src/java.base/share/classes/java/nio/Heap-X-Buffer.java.template
@@ -27,6 +27,7 @@
 
 package java.nio;
 
+import java.lang.ref.Reference;
 import java.util.Objects;
 import jdk.internal.access.foreign.MemorySegmentProxy;
 
@@ -162,13 +163,21 @@ class Heap$Type$Buffer$RW$
 #end[byte]
 
     public $type$ get() {
-        checkSegment();
-        return hb[ix(nextGetIndex())];
+        Object scope = checkSegment();
+        try {
+            return hb[ix(nextGetIndex())];
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public $type$ get(int i) {
-        checkSegment();
-        return hb[ix(checkIndex(i))];
+        Object scope = checkSegment();
+        try {
+            return hb[ix(checkIndex(i))];
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #if[streamableType]
@@ -178,22 +187,30 @@ class Heap$Type$Buffer$RW$
 #end[streamableType]
 
     public $Type$Buffer get($type$[] dst, int offset, int length) {
-        checkSegment();
-        Objects.checkFromIndexSize(offset, length, dst.length);
-        int pos = position();
-        if (length > limit() - pos)
-            throw new BufferUnderflowException();
-        System.arraycopy(hb, ix(pos), dst, offset, length);
-        position(pos + length);
-        return this;
+        Object scope = checkSegment();
+        try {
+            Objects.checkFromIndexSize(offset, length, dst.length);
+            int pos = position();
+            if (length > limit() - pos)
+                throw new BufferUnderflowException();
+            System.arraycopy(hb, ix(pos), dst, offset, length);
+            position(pos + length);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public $Type$Buffer get(int index, $type$[] dst, int offset, int length) {
-        checkSegment();
-        Objects.checkFromIndexSize(index, length, limit());
-        Objects.checkFromIndexSize(offset, length, dst.length);
-        System.arraycopy(hb, ix(index), dst, offset, length);
-        return this;
+        Object scope = checkSegment();
+        try {
+            Objects.checkFromIndexSize(index, length, limit());
+            Objects.checkFromIndexSize(offset, length, dst.length);
+            System.arraycopy(hb, ix(index), dst, offset, length);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public boolean isDirect() {
@@ -208,9 +225,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer put($type$ x) {
 #if[rw]
-        checkSegment();
-        hb[ix(nextPutIndex())] = x;
-        return this;
+        Object scope = checkSegment();
+        try {
+            hb[ix(nextPutIndex())] = x;
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -218,9 +239,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer put(int i, $type$ x) {
 #if[rw]
-        checkSegment();
-        hb[ix(checkIndex(i))] = x;
-        return this;
+        Object scope = checkSegment();
+        try {
+            hb[ix(checkIndex(i))] = x;
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -228,14 +253,18 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer put($type$[] src, int offset, int length) {
 #if[rw]
-        checkSegment();
-        Objects.checkFromIndexSize(offset, length, src.length);
-        int pos = position();
-        if (length > limit() - pos)
-            throw new BufferOverflowException();
-        System.arraycopy(src, offset, hb, ix(pos), length);
-        position(pos + length);
-        return this;
+        Object scope = checkSegment();
+        try {
+            Objects.checkFromIndexSize(offset, length, src.length);
+            int pos = position();
+            if (length > limit() - pos)
+                throw new BufferOverflowException();
+            System.arraycopy(src, offset, hb, ix(pos), length);
+            position(pos + length);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -243,9 +272,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer put($Type$Buffer src) {
 #if[rw]
-        checkSegment();
-        super.put(src);
-        return this;
+        Object scope = checkSegment();
+        try {
+            super.put(src);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -253,11 +286,15 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer put(int index, $type$[] src, int offset, int length) {
 #if[rw]
-        checkSegment();
-        Objects.checkFromIndexSize(index, length, limit());
-        Objects.checkFromIndexSize(offset, length, src.length);
-        System.arraycopy(src, offset, hb, ix(index), length);
-        return this;
+        Object scope = checkSegment();
+        try {
+            Objects.checkFromIndexSize(index, length, limit());
+            Objects.checkFromIndexSize(offset, length, src.length);
+            System.arraycopy(src, offset, hb, ix(index), length);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -266,19 +303,23 @@ class Heap$Type$Buffer$RW$
 #if[char]
 
     public $Type$Buffer put(String src, int start, int end) {
-        checkSegment();
-        int length = end - start;
-        Objects.checkFromIndexSize(start, length, src.length());
-        if (isReadOnly())
-            throw new ReadOnlyBufferException();
-        int pos = position();
-        int lim = limit();
-        int rem = (pos <= lim) ? lim - pos : 0;
-        if (length > rem)
-            throw new BufferOverflowException();
-        src.getChars(start, end, hb, ix(pos));
-        position(pos + length);
-        return this;
+        Object scope = checkSegment();
+        try {
+            int length = end - start;
+            Objects.checkFromIndexSize(start, length, src.length());
+            if (isReadOnly())
+                throw new ReadOnlyBufferException();
+            int pos = position();
+            int lim = limit();
+            int rem = (pos <= lim) ? lim - pos : 0;
+            if (length > rem)
+                throw new BufferOverflowException();
+            src.getChars(start, end, hb, ix(pos));
+            position(pos + length);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[char]
@@ -318,21 +359,34 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public char getChar() {
-        checkSegment();
-        return UNSAFE.getCharUnaligned(hb, byteOffset(nextGetIndex(2)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getCharUnaligned(hb, byteOffset(nextGetIndex(2)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public char getChar(int i) {
-        return UNSAFE.getCharUnaligned(hb, byteOffset(checkIndex(i, 2)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getCharUnaligned(hb, byteOffset(checkIndex(i, 2)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putChar(char x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putCharUnaligned(hb, byteOffset(nextPutIndex(2)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putCharUnaligned(hb, byteOffset(nextPutIndex(2)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -340,9 +394,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putChar(int i, char x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putCharUnaligned(hb, byteOffset(checkIndex(i, 2)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putCharUnaligned(hb, byteOffset(checkIndex(i, 2)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -373,22 +431,34 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public short getShort() {
-        checkSegment();
-        return UNSAFE.getShortUnaligned(hb, byteOffset(nextGetIndex(2)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getShortUnaligned(hb, byteOffset(nextGetIndex(2)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public short getShort(int i) {
-        checkSegment();
-        return UNSAFE.getShortUnaligned(hb, byteOffset(checkIndex(i, 2)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getShortUnaligned(hb, byteOffset(checkIndex(i, 2)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putShort(short x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putShortUnaligned(hb, byteOffset(nextPutIndex(2)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putShortUnaligned(hb, byteOffset(nextPutIndex(2)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -396,9 +466,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putShort(int i, short x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putShortUnaligned(hb, byteOffset(checkIndex(i, 2)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putShortUnaligned(hb, byteOffset(checkIndex(i, 2)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -429,22 +503,34 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public int getInt() {
-        checkSegment();
-        return UNSAFE.getIntUnaligned(hb, byteOffset(nextGetIndex(4)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getIntUnaligned(hb, byteOffset(nextGetIndex(4)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public int getInt(int i) {
-        checkSegment();
-        return UNSAFE.getIntUnaligned(hb, byteOffset(checkIndex(i, 4)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getIntUnaligned(hb, byteOffset(checkIndex(i, 4)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putInt(int x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putIntUnaligned(hb, byteOffset(nextPutIndex(4)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putIntUnaligned(hb, byteOffset(nextPutIndex(4)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -452,9 +538,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putInt(int i, int x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putIntUnaligned(hb, byteOffset(checkIndex(i, 4)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putIntUnaligned(hb, byteOffset(checkIndex(i, 4)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -485,22 +575,34 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public long getLong() {
-        checkSegment();
-        return UNSAFE.getLongUnaligned(hb, byteOffset(nextGetIndex(8)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getLongUnaligned(hb, byteOffset(nextGetIndex(8)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public long getLong(int i) {
-        checkSegment();
-        return UNSAFE.getLongUnaligned(hb, byteOffset(checkIndex(i, 8)), bigEndian);
+        Object scope = checkSegment();
+        try {
+            return UNSAFE.getLongUnaligned(hb, byteOffset(checkIndex(i, 8)), bigEndian);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putLong(long x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putLongUnaligned(hb, byteOffset(nextPutIndex(8)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putLongUnaligned(hb, byteOffset(nextPutIndex(8)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -508,9 +610,13 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putLong(int i, long x) {
 #if[rw]
-        checkSegment();
-        UNSAFE.putLongUnaligned(hb, byteOffset(checkIndex(i, 8)), x, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            UNSAFE.putLongUnaligned(hb, byteOffset(checkIndex(i, 8)), x, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -541,25 +647,37 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public float getFloat() {
-        checkSegment();
-        int x = UNSAFE.getIntUnaligned(hb, byteOffset(nextGetIndex(4)), bigEndian);
-        return Float.intBitsToFloat(x);
+        Object scope = checkSegment();
+        try {
+            int x = UNSAFE.getIntUnaligned(hb, byteOffset(nextGetIndex(4)), bigEndian);
+            return Float.intBitsToFloat(x);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public float getFloat(int i) {
-        checkSegment();
-        int x = UNSAFE.getIntUnaligned(hb, byteOffset(checkIndex(i, 4)), bigEndian);
-        return Float.intBitsToFloat(x);
+        Object scope = checkSegment();
+        try {
+            int x = UNSAFE.getIntUnaligned(hb, byteOffset(checkIndex(i, 4)), bigEndian);
+            return Float.intBitsToFloat(x);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putFloat(float x) {
 #if[rw]
-        checkSegment();
-        int y = Float.floatToRawIntBits(x);
-        UNSAFE.putIntUnaligned(hb, byteOffset(nextPutIndex(4)), y, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            int y = Float.floatToRawIntBits(x);
+            UNSAFE.putIntUnaligned(hb, byteOffset(nextPutIndex(4)), y, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -567,10 +685,14 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putFloat(int i, float x) {
 #if[rw]
-        checkSegment();
-        int y = Float.floatToRawIntBits(x);
-        UNSAFE.putIntUnaligned(hb, byteOffset(checkIndex(i, 4)), y, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            int y = Float.floatToRawIntBits(x);
+            UNSAFE.putIntUnaligned(hb, byteOffset(checkIndex(i, 4)), y, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -601,25 +723,37 @@ class Heap$Type$Buffer$RW$
 #if[rw]
 
     public double getDouble() {
-        checkSegment();
-        long x = UNSAFE.getLongUnaligned(hb, byteOffset(nextGetIndex(8)), bigEndian);
-        return Double.longBitsToDouble(x);
+        Object scope = checkSegment();
+        try {
+            long x = UNSAFE.getLongUnaligned(hb, byteOffset(nextGetIndex(8)), bigEndian);
+            return Double.longBitsToDouble(x);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
     public double getDouble(int i) {
-        checkSegment();
-        long x = UNSAFE.getLongUnaligned(hb, byteOffset(checkIndex(i, 8)), bigEndian);
-        return Double.longBitsToDouble(x);
+        Object scope = checkSegment();
+        try {
+            long x = UNSAFE.getLongUnaligned(hb, byteOffset(checkIndex(i, 8)), bigEndian);
+            return Double.longBitsToDouble(x);
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
     }
 
 #end[rw]
 
     public $Type$Buffer putDouble(double x) {
 #if[rw]
-        checkSegment();
-        long y = Double.doubleToRawLongBits(x);
-        UNSAFE.putLongUnaligned(hb, byteOffset(nextPutIndex(8)), y, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            long y = Double.doubleToRawLongBits(x);
+            UNSAFE.putLongUnaligned(hb, byteOffset(nextPutIndex(8)), y, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -627,10 +761,14 @@ class Heap$Type$Buffer$RW$
 
     public $Type$Buffer putDouble(int i, double x) {
 #if[rw]
-        checkSegment();
-        long y = Double.doubleToRawLongBits(x);
-        UNSAFE.putLongUnaligned(hb, byteOffset(checkIndex(i, 8)), y, bigEndian);
-        return this;
+        Object scope = checkSegment();
+        try {
+            long y = Double.doubleToRawLongBits(x);
+            UNSAFE.putLongUnaligned(hb, byteOffset(checkIndex(i, 8)), y, bigEndian);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
