--- a/src/java.base/share/classes/java/nio/Direct-X-Buffer-bin.java.template
+++ b/src/java.base/share/classes/java/nio/Direct-X-Buffer-bin.java.template
@@ -33,7 +33,6 @@ class XXX {
 
     private $type$ get$Type$(long a) {
         try {
-            checkSegment();
             $memtype$ x = UNSAFE.get$Memtype$Unaligned(null, a, bigEndian);
             return $fromBits$(x);
         } finally {
@@ -41,28 +40,36 @@ class XXX {
         }
     }
 
+    @Critical
     public $type$ get$Type$() {
+        Object scope = null;
         try {
+            scope = checkSegment();
             return get$Type$(ix(nextGetIndex($BYTES_PER_VALUE$)));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
     }
 
+    @Critical
     public $type$ get$Type$(int i) {
+        Object scope = null;
         try {
+            scope = checkSegment();
             return get$Type$(ix(checkIndex(i, $BYTES_PER_VALUE$)));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
     }
 
 #end[rw]
 
+    @Critical
     private ByteBuffer put$Type$(long a, $type$ x) {
 #if[rw]
         try {
-            checkSegment();
             $memtype$ y = $toBits$(x);
             UNSAFE.put$Memtype$Unaligned(null, a, y, bigEndian);
         } finally {
@@ -76,8 +83,13 @@ class XXX {
 
     public ByteBuffer put$Type$($type$ x) {
 #if[rw]
-        put$Type$(ix(nextPutIndex($BYTES_PER_VALUE$)), x);
-        return this;
+        Object scope = null;
+        try {
+            put$Type$(ix(nextPutIndex($BYTES_PER_VALUE$)), x);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
@@ -85,8 +97,14 @@ class XXX {
 
     public ByteBuffer put$Type$(int i, $type$ x) {
 #if[rw]
-        put$Type$(ix(checkIndex(i, $BYTES_PER_VALUE$)), x);
-        return this;
+        Object scope = null;
+        try {
+            scope = checkSegment();
+            put$Type$(ix(checkIndex(i, $BYTES_PER_VALUE$)), x);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
