--- a/src/java.base/share/classes/java/nio/Direct-X-Buffer.java.template
+++ b/src/java.base/share/classes/java/nio/Direct-X-Buffer.java.template
@@ -272,21 +272,27 @@ class Direct$Type$Buffer$RW$$BO$
         return address + ((long)i << $LG_BYTES_PER_VALUE$);
     }
 
+    @Critical
     public $type$ get() {
+        Object scope = null;
         try {
-            checkSegment();
+            scope = checkSegment();
             return $fromBits$($swap$(UNSAFE.get$Swaptype$(ix(nextGetIndex()))));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
     }
 
+    @Critical
     public $type$ get(int i) {
+        Object scope = null;
         try {
-            checkSegment();
+            scope = checkSegment();
             return $fromBits$($swap$(UNSAFE.get$Swaptype$(ix(checkIndex(i)))));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
     }
 
@@ -300,9 +306,10 @@ class Direct$Type$Buffer$RW$$BO$
     }
 #end[streamableType]
 
+    @Critical
     public $Type$Buffer get($type$[] dst, int offset, int length) {
 #if[rw]
-        checkSegment();
+        Object scope = null;
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_TO_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(offset, length, dst.length);
             int pos = position();
@@ -314,6 +321,7 @@ class Direct$Type$Buffer$RW$$BO$
 
             long dstOffset = ARRAY_BASE_OFFSET + ((long)offset << $LG_BYTES_PER_VALUE$);
             try {
+                scope = checkSegment();
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
                     UNSAFE.copySwapMemory(null,
@@ -331,6 +339,7 @@ class Direct$Type$Buffer$RW$$BO$
                                       (long)length << $LG_BYTES_PER_VALUE$);
             } finally {
                 Reference.reachabilityFence(this);
+                Reference.reachabilityFence(scope);
             }
             position(pos + length);
         } else {
@@ -342,15 +351,17 @@ class Direct$Type$Buffer$RW$$BO$
 #end[rw]
     }
 
+    @Critical
     public $Type$Buffer get(int index, $type$[] dst, int offset, int length) {
 #if[rw]
-        checkSegment();
+        Object scope = null;
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_TO_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(index, length, limit());
             Objects.checkFromIndexSize(offset, length, dst.length);
 
             long dstOffset = ARRAY_BASE_OFFSET + ((long)offset << $LG_BYTES_PER_VALUE$);
             try {
+                scope = checkSegment();
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
                     UNSAFE.copySwapMemory(null,
@@ -368,6 +379,7 @@ class Direct$Type$Buffer$RW$$BO$
                                       (long)length << $LG_BYTES_PER_VALUE$);
             } finally {
                 Reference.reachabilityFence(this);
+                Reference.reachabilityFence(scope);
             }
         } else {
             super.get(index, dst, offset, length);
@@ -379,13 +391,16 @@ class Direct$Type$Buffer$RW$$BO$
     }
 #end[rw]
 
+    @Critical
     public $Type$Buffer put($type$ x) {
 #if[rw]
+        Object scope = null;
         try {
-            checkSegment();
+            scope = checkSegment();
             UNSAFE.put$Swaptype$(ix(nextPutIndex()), $swap$($toBits$(x)));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
         return this;
 #else[rw]
@@ -393,13 +408,16 @@ class Direct$Type$Buffer$RW$$BO$
 #end[rw]
     }
 
+    @Critical
     public $Type$Buffer put(int i, $type$ x) {
 #if[rw]
+        Object scope = null;
         try {
-            checkSegment();
+            scope = checkSegment();
             UNSAFE.put$Swaptype$(ix(checkIndex(i)), $swap$($toBits$(x)));
         } finally {
             Reference.reachabilityFence(this);
+            Reference.reachabilityFence(scope);
         }
         return this;
 #else[rw]
@@ -407,19 +425,26 @@ class Direct$Type$Buffer$RW$$BO$
 #end[rw]
     }
 
+    @Critical
     public $Type$Buffer put($Type$Buffer src) {
 #if[rw]
-        checkSegment();
-        super.put(src);
-        return this;
+        Object scope = null;
+        try {
+            scope = checkSegment();
+            super.put(src);
+            return this;
+        } finally {
+            Reference.reachabilityFence(scope);
+        }
 #else[rw]
         throw new ReadOnlyBufferException();
 #end[rw]
     }
 
+    @Critical
     public $Type$Buffer put($type$[] src, int offset, int length) {
 #if[rw]
-        checkSegment();
+        Object scope = null;
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_FROM_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(offset, length, src.length);
             int pos = position();
@@ -431,6 +456,7 @@ class Direct$Type$Buffer$RW$$BO$
 
             long srcOffset = ARRAY_BASE_OFFSET + ((long)offset << $LG_BYTES_PER_VALUE$);
             try {
+                scope = checkSegment();
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
                     UNSAFE.copySwapMemory(src,
@@ -448,6 +474,7 @@ class Direct$Type$Buffer$RW$$BO$
                                       (long)length << $LG_BYTES_PER_VALUE$);
             } finally {
                 Reference.reachabilityFence(this);
+                Reference.reachabilityFence(scope);
             }
             position(pos + length);
         } else {
@@ -459,9 +486,10 @@ class Direct$Type$Buffer$RW$$BO$
 #end[rw]
     }
 
+    @Critical
     public $Type$Buffer put(int index, $type$[] src, int offset, int length) {
 #if[rw]
-        checkSegment();
+        Object scope = null;
         if (((long)length << $LG_BYTES_PER_VALUE$) > Bits.JNI_COPY_FROM_ARRAY_THRESHOLD) {
             Objects.checkFromIndexSize(index, length, limit());
             Objects.checkFromIndexSize(offset, length, src.length);
@@ -469,6 +497,7 @@ class Direct$Type$Buffer$RW$$BO$
 
             long srcOffset = ARRAY_BASE_OFFSET + ((long)offset << $LG_BYTES_PER_VALUE$);
             try {
+                scope = checkSegment();
 #if[!byte]
                 if (order() != ByteOrder.nativeOrder())
                     UNSAFE.copySwapMemory(src,
@@ -486,6 +515,7 @@ class Direct$Type$Buffer$RW$$BO$
                                       (long)length << $LG_BYTES_PER_VALUE$);
             } finally {
                 Reference.reachabilityFence(this);
+                Reference.reachabilityFence(scope);
             }
         } else {
             super.put(index, src, offset, length);
