8252302: jextract should compile generated java code with -parameters and -g:lines option

--- a/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/internal/jextract/impl/resources/RuntimeHelper.java.template
@@ -22,6 +22,8 @@ import static ${C_LANG}.*;
 
 public class RuntimeHelper {
 
+    private RuntimeHelper() {}
+
     private final static ForeignLinker ABI = CSupport.getSystemLinker();
 
     private final static ClassLoader LOADER = RuntimeHelper.class.getClassLoader();
